# qwery-sdk-rust

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  types.rs
